# olist-data-science

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: api.py  streamlit_app.py
data/processed/: category_performance.csv  delivery_performance.csv  monthly_trend.csv
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_eda_exploratoria.ipynb  02_rfv_segmentacao.ipynb  03_recomendacao.ipynb
scripts/: download_data.py  run_pipeline.py
src/: analysis.py  etl.py  features.py  models.py  recommender.py  visualization.py
tests/: test_etl.py  test_features.py  test_models.py
