[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-data-science"
version = "0.1.0"
description = "Análise RFV, segmentação de clientes e sistema de recomendação com dados da Olist"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "duckdb>=0.9",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "ydata-profiling>=4.6",
    "mlflow>=2.8",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.5",
    "streamlit>=1.28",
    "joblib>=1.3",
    "pytest>=7.4",
    "ruff>=0.1",
]

[project.optional-dependencies]
recommender = [
    "scikit-surprise>=1.1",
    "implicit>=0.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
